# Axolotl

./: README.md
Axolotl/back/src-tauri/: Cargo.toml  tauri.conf.json
Axolotl/back/src-tauri/src/: Paths.rs  main.rs
Axolotl/front/axolotl/: global.d.ts  package-lock.json  package.json  tsconfig.json
Axolotl/front/axolotl/compoents/: AppLauncher.tsx  Notepad.tsx  SpotifyControl.tsx
Axolotl/front/axolotl/components/: AppLauncher.tsx  Chat.tsx  FileExplorer.tsx  Notepad.tsx  Player.tsx  Spotify.tsx
Axolotl/front/axolotl/pages/: _app.tsx  callback.tsx  index.tsx  spotify-test.tsx  spoty.tsx
Axolotl/front/axolotl/pages/api/: launchApp.ts
Axolotl/front/axolotl/public/utils/: loadSpotifySdk.ts
Axolotl/front/axolotl/public/utils/paths/: AppPaths.json  Awakened PoE Trade.exe.lnk  Battle.net.lnk  Code.exe.lnk  Diablo IV.exe.lnk  EXCEL.EXE.lnk  Microsoft Teams classic (work or school).lnk  NVIDIA GeForce Experience.exe.lnk  PathOfExile_x64Steam.exe.lnk  PowerPoint.lnk  Script.ps1  WINWORD.EXE.lnk  World of Warcraft Launcher.exe.lnk  python.exe.lnk  setup.exe.lnk  steam.exe.lnk  vivaldi.exe - Shortcut.lnk
Axolotl/front/axolotl/public/utils/types/: spotify-web-playback.d.ts
Axolotl/front/axolotl/styles/: AppLauncher.module.scss  Home.module.scss  Notepad.module.scss  Spotify.module.scss  player.module.scss
Axolotl/front/axolotl/utils/: appPaths.ts
