[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"       # Consider updating to a more recent Rust version if needed

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = [] }
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z" # Optimize for binary size (Optional)
